RESOLVED FIXED162937
REGRESSION (r206778): Release JSC test ChakraCore.yaml/ChakraCore/test/Error/validate_line_column.js.default failing
https://bugs.webkit.org/show_bug.cgi?id=162937
Summary REGRESSION (r206778): Release JSC test ChakraCore.yaml/ChakraCore/test/Error/...
Ryan Haddad
Reported 2016-10-04 14:36:17 PDT
Release JSC test ChakraCore.yaml/ChakraCore/test/Error/validate_line_column.js.default failing https://build.webkit.org/builders/Apple%20El%20Capitan%20Release%20JSC%20%28Tests%29/builds/9393 https://build.webkit.org/builders/Apple%20Yosemite%20Release%20JSC%20%28Tests%29/builds/14774 ChakraCore.yaml/ChakraCore/test/Error/validate_line_column.js.default: DIFF FAILURE! ChakraCore.yaml/ChakraCore/test/Error/validate_line_column.js.default: --- ../.tests/ChakraCore.yaml/ChakraCore/test/Error/validate_line_column.baseline-jsc 2016-10-04 12:59:54.000000000 -0700 ChakraCore.yaml/ChakraCore/test/Error/validate_line_column.js.default: +++ ../ChakraCore.yaml/ChakraCore/test/Error/validate_line_column.js.default.out 2016-10-04 13:12:41.000000000 -0700 ChakraCore.yaml/ChakraCore/test/Error/validate_line_column.js.default: @@ -4,7 +4,7 @@ ChakraCore.yaml/ChakraCore/test/Error/validate_line_column.js.default: validate_line_column.js:21:11 ChakraCore.yaml/ChakraCore/test/Error/validate_line_column.js.default: foo@validate_line_column.js:10:17 ChakraCore.yaml/ChakraCore/test/Error/validate_line_column.js.default: global code@validate_line_column.js:20:4 ChakraCore.yaml/ChakraCore/test/Error/validate_line_column.js.default: -validate_line_column.js:26:7 ChakraCore.yaml/ChakraCore/test/Error/validate_line_column.js.default: +validate_line_column.js:24:13 ChakraCore.yaml/ChakraCore/test/Error/validate_line_column.js.default: foo@validate_line_column.js:10:17 ChakraCore.yaml/ChakraCore/test/Error/validate_line_column.js.default: global code@validate_line_column.js:24:4 ChakraCore.yaml/ChakraCore/test/Error/validate_line_column.js.default: validate_line_column.js:30:14 FAIL: ChakraCore.yaml/ChakraCore/test/Error/validate_line_column.js.default
Attachments
Patch (5.34 KB, patch)
2016-10-04 15:14 PDT, Yusuke Suzuki
saam: review+
Ryan Haddad
Comment 1 2016-10-04 14:36:33 PDT
Seems to have started with https://trac.webkit.org/changeset/206778
Yusuke Suzuki
Comment 2 2016-10-04 14:57:04 PDT
OK, maybe, I've just figured out the reason. I'll fix it soon.
Yusuke Suzuki
Comment 3 2016-10-04 15:14:23 PDT
Yusuke Suzuki
Comment 4 2016-10-04 15:54:09 PDT
Note You need to log in before you can comment on or make changes to this bug.